styles/GameTable.module.css
.tableWrapper {
    overflow-x: auto;
    background-color: rgb(0, 0, 0, 0.7);
    margin: 16px 0;
}

.gameTable {
    width: 100%;
    border-collapse: collapse;
}

.gameTable td {
    border: 1px solid;
    padding: 8px;
}

.gameTable th {
    border: 1px solid;
    padding: 16px;
    font-size: 1.1em;
    text-transform: uppercase;
}

.filters {
    display: flex;
    gap: 16px;
}

.dark-input {
    background-color: hsl(0, 0%, 20%) !important;
    border-color: #808080;
    color: #fff !important;
}

.dark-input::placeholder {
    color: #808080;
}

.vodCell {
    display: flex;
    flex-direction: column;
    text-decoration: underline;
}

.adminCell {
    display: flex;
    flex-direction: column;
    text-decoration: underline;
}

.br-div {
    height: 0.75em;
}

.color-icon {
    font-family: 'Noto Color Emoji';
}

.tag {
    border-radius: 4px;
    padding: 2px 4px;
    display: inline-block;
    height: fit-content;
    font-weight: bold;
    font-size: 80%;
    color: black;
}

.tag:before {
    display: inline-block;
    content: '';
    --tag: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1644 1644"><path d="M448 448c0-71-57-128-128-128s-128 57-128 128 57 128 128 128 128-57 128-128zm1067 576c0 34-14 67-37 90l-491 492c-24 23-57 37-91 37s-67-14-90-37L91 890C40 840 0 743 0 672V256c0-70 58-128 128-128h416c71 0 168 40 219 91l715 714c23 24 37 57 37 91z"/></svg>');
    background-color: black;
    background-size: contain;
    background-repeat: no-repeat;
    vertical-align: text-top;
    -webkit-mask: var(--tag);
    mask: var(--tag);
    width: 1em;
    height: 1em;
    margin-right: 2px;
}

.backlog-grid {
    width: 100%;
    margin-top: 1rem;
    gap: 1rem;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
}

